# internal/models/req/groups.go
@@ -6,7 +6,8 @@ import (
 	"gorm.io/gorm"
 )
 
-type GroupsGet struct{}
+type GroupsGet struct {
+}
 
 type GroupsGetList struct {
 	models.Page `gorm:"-"`
@@ -17,10 +18,13 @@ func (list GroupsGetList) Scope(db *gorm.DB) *gorm.DB {
 	return db
 }
 
-type GroupsCreate struct{}
+type GroupsCreate struct {
+	GroupName   string `json:"group_name" binding:"required"` // 群組名稱
+	Description string `json:"description"`                   // 描述
+}
 
 type GroupsUpdate struct{}
 
-type GroupsDelete  struct {
+type GroupsDelete struct {
 	ID string `json:"id"`
 }
