# internal/models/resp/groups.go
@@ -1,8 +1,12 @@
 package resp
 
-type GroupsGet struct{}
+type GroupsGet struct {
+	ID          string `json:"id"`
+	GroupName   string `json:"group_name"`
+	Description string `json:"description"`
+}
 
 type GroupsGetList struct {
 	Page PageResponse `json:"page,omitempty"`
-	Data []GroupsGet `json:"data"`
+	Data []GroupsGet  `json:"data"`
 }
